[build-system]
requires = ["hatchling>=1.8"]
build-backend = "hatchling.build"

[project]
name = "tonnetz3d"
version = "0.1.0"
description = "Interactive 3D Tonnetz visualizer using Plotly"
authors = [
  { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "plotly>=5.20",
  "numpy>=1.24",
]

[project.scripts]
tonnetz3d = "tonnetz3d.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tonnetz3d"]
